app-infra/gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external-http
  annotations:
#    networking.gke.io/certmap: certificate-map-demo
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
#  - name: https
#    protocol: HTTPS
#    port: 443  
    allowedRoutes:
      namespaces:
        from: All
