app-infra/gateway/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-server
spec: 
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "argocd.devopslabs.cloud"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: argocd-server
      port:
        name: http
